refactor: 사다리의 시작 위치와 결과 위치의 반환값을 원시타입으로 변경